测试 .net 程序调用 js
测试 .net 程序调用 js ，并导入 资源

--- a/src/DynamicTable/Component1.razor
+++ b/src/DynamicTable/Component1.razor
@@ -1,3 +1,14 @@
-﻿<div class="my-component">
+﻿
+@inject IJSRuntime JS;
+
+<div class="my-component">
     This Blazor component is defined in the <strong>DynamicTable</strong> package.
 </div>
+
+@code{
+    protected override async Task OnInitializedAsync()
+    {
+        await using var js = new ExampleJsInterop(JS);
+        await js.Prompt("12314124");
+    }
+}
