--- a/samples/DynamicTable.Wasm/Pages/Index.razor
+++ b/samples/DynamicTable.Wasm/Pages/Index.razor
@@ -2,8 +2,9 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app. 
+<DynamicTableComponent></DynamicTableComponent>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code{
+    
 
-<Component1></Component1>
+}
