--- a/samples/DynamicTable.Wasm/Pages/Index.razor
+++ b/samples/DynamicTable.Wasm/Pages/Index.razor
@@ -1,15 +1,19 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>例子</h1>
 
-<DynamicTableComponent DataSource="@_pets" TItem="Pet">
-    <Column @bind-Field="@context.PetId">
-        <a>@context.PetId</a>
-    </Column>
-    <Column @bind-Field="@context.Name">
-        <a>@context.Name</a>
-    </Column>
-</DynamicTableComponent>
+<div class="d-table">
+    
+    <div class="d-head">
+
+    </div>
+    <div class="d-body">
+
+    </div>
+    <div class="d-foot">
+
+    </div>
+</div>
 
 @code{
 
